data/derived/comb/progs/unify/prog5046.ml.out
Characters 58-75:
  | h::t -> [listReverse t]@h;;
            ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
